--- a/client/landing_page/aboutus.html
+++ b/client/landing_page/aboutus.html
@@ -1,9 +1,11 @@
 <template name="aboutus">
     <div class="container">
+      <div class="about-header"><center><h2>За нас:</h2></center></div>
+      <hr/>
         <div class="row">
             <div class="col-md-6">
 
-
+            <img class="css-image-about img-rounded" src="{{default.src}}"/>
 
             </div>
 
