finished admin login, updated product schema, created template and route for single product

--- a/client/landing_page/aboutus.html
+++ b/client/landing_page/aboutus.html
@@ -11,7 +11,7 @@
 
             <div class="col-md-6">
               <p>
-               {{about.text}}
+               Здравейте. Казвам се Теодор, на 24 години, роден и израсъл в Благоевград. Завърших  Американския университет в България и веднага се впуснах в предприемачеството. Създадох строителна компания за строеж на соларни паркове и за по-малко от година имахме построени паркове в три държави, компанията създаде 30 работни места и имаше почти милион приходи. Но дойде момент, в който усетих, че мотивите ми да започна този бизнес бяха грешнии не работех със страст. По-лошо – трябваше да се напъвам, за да си върша работата. Не харесвах хората, с които общувах, средата, в коятотрябваше да съм. Послушах сърцето си и продадох компанията. След това се запознах с Татяна и се зароди идеята за тахани Тея покрай едно пътуване в Турция. Опитахме за пръв път сусамов и лешников тахан и се влюбихме до уши не само един в друг, но и в тази прекрасна храна. Тогава решихме и да започнем тази инициатива.
              </p>
 
             </div>
