--- a/client/landing_page/products.html
+++ b/client/landing_page/products.html
@@ -25,7 +25,7 @@
             <div class="col-md-6 col-xs-12">
                 {{#each product}}
                     <div class="col-md-6 col-xs-6 css-product-image">
-                    <a href="#"><img src="/{{img}}" class="css-crop-product" /></a>
+                    <a href="/product/{{_id}}"><img src="/{{img}}" class="css-crop-product" /></a>
                     </div>
                 {{/each}}
             </div>
@@ -33,7 +33,8 @@
 
             <div class="col-md-6 col-xs-12">
 
-            <p>{{description.text}}
+            <p>
+                Таханите са едно вълшебство. Ароматът им, вкусът им, здравословните им ползи. Емоцията и екзотиката, която носят. От плътният сусамов вкус до незабравимият аромат на лешник, всичко е една магия. Комбинацията от минерали, витамини, полезни мазнини и белтъчини правят таханите задължителни за всеки един хранителен режим. А като добавена екстра – може да се ползва в разнообразни рецепти за сладкиши, баници, сладки и курабии, дресинги за салати и риби. В нашият блог може да намерите десетки рецепти, които да изпробвате с нашите тахани. Подходящ за всеки, без значение дали е на 2 или на 200 години, дали е активен спортист или чревоугодник. Нашите 100 % натурални тахани се консумират не само от хора, загрижени за здравето си, а и от професионални атлети, бременни жени, малки деца. Не използваме никакви примеси, консерванти, адитиви, които не сме обявили на етикета. Ама тук излъгахме – влагаме много любов, старание и контрол върху целия производствен процес. Избираме винаги най-качествената суровина, изследваме я и след като сме уверени, че тя е подходяща, я влагаме в продуктите си. Когато започвахме нашето таханено приключение се колебахме доста относно името на нашата марка. Създадохме и отхвърлихме доста варианти, докато не решихме да се върнем в началото и да намерим този облик, който отговаряше най-много на нашата цел – да направим истинска и полезна храна достъпна и позната на повече хора.Спряхме се на името Тея (или Theia). Така се е казвала и титанът, покровител на слънцето, сестра на Хелиос, въплътила в себе си щастие, радост и живот. Това стои и зад нашата марка – желанието да помагаме на хората да бъдат по-щастливи и живи.
             </p>
 
             </div><!-- / col-md-6 -->
