--- a/client/landing_page/main.html
+++ b/client/landing_page/main.html
@@ -1,4 +1,6 @@
 <template name="main">
-    {{> aboutus }}
+    {{> navbar}}
+    {{> jumbotron}}
     {{> products}}
+    {{> aboutus }}
 </template>
