--- a/client/landing_page/navbar.html
+++ b/client/landing_page/navbar.html
@@ -9,17 +9,19 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">Theia Tahini</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-
+                    <li><a href="#products">Продукти </a></li>
+                    <li><a href="#aboutus"> За Нас </a></li>
+                    <li><a href="/blog">Блог</a></li>
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
 
                 </ul>
+
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
     </nav>
