--- a/client/landing_page/products.html
+++ b/client/landing_page/products.html
@@ -1,24 +1,6 @@
-<!--<template name="products">
-    <div class="container">
-        <div class="row">
-            {{#each product}}
-                <div class="col-md-3">
-                    {{name}}
-                </div>
-                <div class="col-md-3">
-                    <img src="/{{img}}" class="css-crop-product" />
-                </div>
-            {{/each}}
-        </div>
-    </div>
-</template>-->
-
-
-
-
 <template name="products">
 
-     <div class="container">
+     <div class="container" id="products">
         <center><h2>Продукти: </h2></center>
         <hr/>
         <div class="row">
