--- a/client/layout.html
+++ b/client/layout.html
@@ -3,9 +3,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="Content-Language" content="bg">
   <title>minstant</title>
+  <link href='https://fonts.googleapis.com/css?family=Exo+2:300,300italic,400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
-{{>yield "header"}}
 {{>yield "main"}}
 
 
