--- a/client/singleProduct.html
+++ b/client/singleProduct.html
@@ -1,11 +1,11 @@
 <template name="singleProduct">
 
-<div class="col-md-4 css-image-product">
-{{product.title}}
+<div class="col-md-6 css-description-product">
+<img src="/{{product.img}}"/>
 </div>
 
-<div class="col-md-8 css-description-product">
-<img src="/{{product.img}}"/>
+<div class="col-md-6 css-image-product">
+{{product.content}}
 </div>
 
 </template>
