--- a/client/layout.html
+++ b/client/layout.html
@@ -6,6 +6,8 @@
   <link href='https://fonts.googleapis.com/css?family=Exo+2:300,300italic,400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
-{{>yield "main"}}
+  {{>yield "navbar"}}
+  {{>yield "main"}}
+
 </body>
 </template>
