--- a/client/navbar.html
+++ b/client/navbar.html
@@ -13,9 +13,11 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a href="#products">Продукти </a></li>
-                    <li><a href="#aboutus"> За Нас </a></li>
-                    <li><a href="/blog">Блог</a></li>
+                    <li><a href="/products">Продукти </a></li>
+                    <li><a href="/recipes">Рецепти </a></li>
+                    <li><a href="/blog">Новини</a></li>
+                    <li><a href="/"> За Нас </a></li>
+                    <li><a href="/contact">Контакт</a></li>
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
