--- a/client/landing_page/aboutus.html
+++ b/client/landing_page/aboutus.html
@@ -4,16 +4,14 @@
       <hr/>
         <div class="row">
             <div class="col-md-6">
-
-            <img class="css-image-about img-rounded" src="aboutDefault.jpg"/>
-
+              <h2> Татяна </h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam imperdiet magna eusapien dignissim luctus. Cras eget venenatis elit. Maecenas ullamcorper in risus et consectetur.zLorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur quis enim pharetra, ultrices arcu quis, efficitur lacus. Nulla pretium ante quis consequat congue. PellenLorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur quis enim pharetra, ultrices arcu quis, efficitur lacus. Nulla pretium ante quis consequat congue. PellenLorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur quis enim pharetra, ultrices arcu quis, efficitur lacus. Nulla pretium ante quis consequat congue. PellenLorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur quis enim pharetra, ultrices arcu quis, efficitur lacus. Nulla pretium ante quis consequat congue. Pellen </p>
             </div>
-
             <div class="col-md-6">
+              <h2> Теодор </h2>
               <p>
                Здравейте. Казвам се Теодор, на 24 години, роден и израсъл в Благоевград. Завърших  Американския университет в България и веднага се впуснах в предприемачеството. Създадох строителна компания за строеж на соларни паркове и за по-малко от година имахме построени паркове в три държави, компанията създаде 30 работни места и имаше почти милион приходи. Но дойде момент, в който усетих, че мотивите ми да започна този бизнес бяха грешнии не работех със страст. По-лошо – трябваше да се напъвам, за да си върша работата. Не харесвах хората, с които общувах, средата, в коятотрябваше да съм. Послушах сърцето си и продадох компанията. След това се запознах с Татяна и се зароди идеята за тахани Тея покрай едно пътуване в Турция. Опитахме за пръв път сусамов и лешников тахан и се влюбихме до уши не само един в друг, но и в тази прекрасна храна. Тогава решихме и да започнем тази инициатива.
              </p>
-
             </div>
         </div>
     </div>
