--- a/client/navbar.html
+++ b/client/navbar.html
@@ -13,10 +13,10 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
+                    <li><a href="/"> Начало </a></li>
                     <li><a href="/products">Продукти </a></li>
                     <li><a href="/recipes">Рецепти </a></li>
                     <li><a href="/blog">Новини</a></li>
-                    <li><a href="/"> За Нас </a></li>
                     <li><a href="/contact">Контакт</a></li>
                 </ul>
 
