--- a/client/recipes/singleRecipe.html
+++ b/client/recipes/singleRecipe.html
@@ -1,2 +1,11 @@
 <template name="singleRecipe">
+  <div class="container">
+    <a class="btn btn-primary" href="/recipes"> Обратно към рецепти </a>
+    <div class="row">
+        <div class="col-md-12">
+            <center><h2>{{recipe.title}}</h2></center>
+            <p>{{recipe.text}}</p>
+        </div>
+    </div>
+</div>
 </template>
