--- a/client/products/singleProduct.html
+++ b/client/products/singleProduct.html
@@ -15,28 +15,55 @@
 
 
 
+
+
+
 <!-- modal for orders -->
 <div class="modal fade" id="productOrder">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
             <div class="modal-title">
+            <center>
+            <h3>{{product.title}}</h3>
+            </center>
             </div><!-- / modal-title-->
           </div><!-- / modal-header -->
-          <form class="js-add-order">
+          <form class="js-add-order ui form">
               <div class="modal-body">
-	                <div class="emailArea">
-	                	E-mail: <input type="text" name="email"/>
-	                </div>
-	                <div class="nameArea">
-	                	Име: <input type="text" name="name"/>
-	                </div>
-	                <div class="adressArea">
-	                	Адрес: <input type="text" name="adress"/>
-	                </div>
-	                <div class="quntityArea">
-	                	Количество: <input type="text" name="quantity"/>
-	                </div>
+
+	                <div class="form-group">
+	                	<label>E-mail: </label>
+                    <input type="text" class="form-control" name="email" placeholder="E-mail..."/>
+	                </div><!-- / form-group -->
+
+	                <div class="form-group">
+
+                    <div class="row">
+
+                    <div class="col-xs-6">
+                    <label>Име:</label> 
+                    <input type="text" class="form-control" name="name" placeholder="Име..."/>
+                    </div><!-- / col-xs-6 -->
+
+                    <div class="col-xs-6">
+                    <label>Фамилия:</label> 
+                    <input type="text" class="form-control" name="family_name" placeholder="Фамилия..."/>
+                    </div><!-- / col-xs-6 -->
+
+                    </div><!-- / row -->
+	                </div><!-- / form-group -->
+
+	                <div class="form-group">
+	                	<label>Адрес:</label>
+                    <input type="text" class="form-control" name="adress" placeholder="Адрес..."/>
+	                </div><!-- / form-group -->
+
+	                <div class="form-group">
+	                	<label>Количество:</label> 
+                    <input type="text" class="form-control" name="quantity" placeholder="Количество..."/>
+	                </div><!-- / form-group -->
+
                 </div><!-- / modal-body -->
                 <div class="modal-footer">
                   <button type="submit" class="btn btn-success" id="orderButton">Поръчай</button>
