--- a/client/layout.html
+++ b/client/layout.html
@@ -6,8 +6,9 @@
   <link href='https://fonts.googleapis.com/css?family=Exo+2:300,300italic,400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
+<div id="content" class="animated fadeIn">
   {{>yield "navbar"}}
   {{>yield "main"}}
-
+</div>
 </body>
 </template>
