--- a/client/products/singleProduct.html
+++ b/client/products/singleProduct.html
@@ -34,7 +34,7 @@
 
 	                <div class="form-group">
 	                	<label>E-mail: </label>
-                    <input type="text" class="form-control" name="email" placeholder="E-mail..."/>
+                    <input type="email" class="form-control" name="email" placeholder="E-mail..."/>
 	                </div><!-- / form-group -->
 
 	                <div class="form-group">
@@ -42,12 +42,12 @@
                     <div class="row">
 
                     <div class="col-xs-6">
-                    <label>Име:</label> 
+                    <label>Име:</label>
                     <input type="text" class="form-control" name="name" placeholder="Име..."/>
                     </div><!-- / col-xs-6 -->
 
                     <div class="col-xs-6">
-                    <label>Фамилия:</label> 
+                    <label>Фамилия:</label>
                     <input type="text" class="form-control" name="family_name" placeholder="Фамилия..."/>
                     </div><!-- / col-xs-6 -->
 
@@ -60,8 +60,8 @@
 	                </div><!-- / form-group -->
 
 	                <div class="form-group">
-	                	<label>Количество:</label> 
-                    <input type="text" class="form-control" name="quantity" placeholder="Количество..."/>
+	                	<label>Количество:</label>
+                    <input type="number" class="form-control" name="quantity" placeholder="Количество..."/>
 	                </div><!-- / form-group -->
 
                 </div><!-- / modal-body -->
