changed the purpose

--- a/client/landing_page/aboutus.html
+++ b/client/landing_page/aboutus.html
@@ -1,6 +1,7 @@
 <template name="aboutus">
-    <div class="container" id="aboutus">
-      <div class="about-header"><center><h2>За нас:</h2></center></div>
+  <div class="container">
+    <div id="aboutus">
+      <div class="about-header"><center><h2>About us:</h2></center></div>
       <hr/>
         <div class="row">
             <div class="col-md-6">
@@ -8,12 +9,13 @@
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam imperdiet magna eusapien dignissim luctus. Cras eget venenatis elit. Maecenas ullamcorper in risus et consectetur.zLorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur quis enim pharetra, ultrices arcu quis, efficitur lacus. Nulla pretium ante quis consequat congue. PellenLorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur quis enim pharetra, ultrices arcu quis, efficitur lacus. Nulla pretium ante quis consequat congue. PellenLorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur quis enim pharetra, ultrices arcu quis, efficitur lacus. Nulla pretium ante quis consequat congue. PellenLorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur quis enim pharetra, ultrices arcu quis, efficitur lacus. Nulla pretium ante quis consequat congue. Pellen </p>
             </div>
             <div class="col-md-6">
-              <h2> Теодор </h2>
+              <h2> Who we are: </h2>
               <p>
-               Здравейте. Казвам се Теодор, на 24 години, роден и израсъл в Благоевград. Завърших  Американския университет в България и веднага се впуснах в предприемачеството. Създадох строителна компания за строеж на соларни паркове и за по-малко от година имахме построени паркове в три държави, компанията създаде 30 работни места и имаше почти милион приходи. Но дойде момент, в който усетих, че мотивите ми да започна този бизнес бяха грешнии не работех със страст. По-лошо – трябваше да се напъвам, за да си върша работата. Не харесвах хората, с които общувах, средата, в коятотрябваше да съм. Послушах сърцето си и продадох компанията. След това се запознах с Татяна и се зароди идеята за тахани Тея покрай едно пътуване в Турция. Опитахме за пръв път сусамов и лешников тахан и се влюбихме до уши не само един в друг, но и в тази прекрасна храна. Тогава решихме и да започнем тази инициатива.
+               We are a group of people who want to help other to obtain knowledge which could serve them in the real life. We are happy that we can share everything we know about technology, economics, mathematics, fitness and diets. The aim of this blog is to be useful for you – our readers. If you are programmers, college students, fitness maniacs or you just want to find something some new information that you could use, here is the place for you. We do not restrict ourselves to one topic because we believe that in this highly competitive world of ours a person should posses different qualities. So if you are reading this article this means that you have already discovered our site. We believe that you will spend a great time with our articles. 
              </p>
             </div>
         </div>
+    </div>
     </div>
 
 </template>
