--- a/client/landing_page/jumbotron.html
+++ b/client/landing_page/jumbotron.html
@@ -1,4 +1,20 @@
 <template name="jumbotron">
-  <img src="logo.png" class="landing-image" />
-
+	<div class="container-fluid">
+			<div class="row css-logo-image">
+				<a href="#">
+				<div class="meteor_head">
+				    <h1 class="meteor_heading">Meteor</h1>
+				    <h3>Learn how to design attractive websites!</h3>
+				 </div>
+				  <img src="logomac.jpg" class="landing-image imageMeteor" />
+				</a>
+			 </div>
+			 <div class="row css-logo-image">
+				 <a href="#">
+				  <img src="mathematicslogo.jpg" class="landing-image" />
+				 </a>
+			 </div>
+			<div class="row top_posts">
+			</div>
+	</div>	
 </template>
