--- a/client/layout.html
+++ b/client/layout.html
@@ -8,8 +8,10 @@
 <body>
 <div id="content">
   {{>yield "navbar"}}
+  <div class="mainarea">
   {{>yield "main"}}
   {{>yield "footer"}}
+  </div>
 </div>
 </body>
 </template>
