--- a/client/navbar.html
+++ b/client/navbar.html
@@ -1,5 +1,5 @@
 <template name="navbar">
-    <nav class="navbar navbar-default">
+    <nav class="navbar-default">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -13,11 +13,11 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a href="/"> Начало </a></li>
-                    <li><a href="/products">Продукти </a></li>
-                    <li><a href="/recipes">Рецепти </a></li>
-                    <li><a href="/blog">Новини</a></li>
-                    <li><a href="/contact">Контакт</a></li>
+                    <li><a href="/"> Influential </a></li>
+                    <li><a href="/blog">Blog</a></li>
+                    <li><a href="/recipes">Meteor</a></li>
+                    <li><a href="#">Mathematics</a></li>
+                    <li><a href="/contact">Contacts</a></li>
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
@@ -30,3 +30,9 @@
 
 
 </template>
+
+
+
+
+
+
