--- a/client/landing_page/jumbotron.html
+++ b/client/landing_page/jumbotron.html
@@ -11,7 +11,11 @@
 			 </div>
 			 <div class="row css-logo-image">
 				 <a href="#">
-				  <img src="mathematicslogo.jpg" class="landing-image" />
+				 <div class="meteor_head">
+				    <h1 class="meteor_heading">Mathematics</h1>
+				    <h3>Read our tutorials on college level Mathematics!</h3>
+				 </div>
+				  <img src="mathematicslogo.jpg" class="landing-image imageMeteor" />
 				 </a>
 			 </div>
 			<div class="row top_posts">
