animations for different tags fixed translation

--- a/client/landing_page/jumbotron.html
+++ b/client/landing_page/jumbotron.html
@@ -1,21 +1,21 @@
 <template name="jumbotron">
 	<div class="container-fluid">
-			<div class="row css-logo-image">
+			<div class="row css-logo-image js-logo-meteor">
 				<a href="#">
-				<div class="meteor_head">
+				<div class="meteor_head meteor_tutorial">
 				    <h1 class="meteor_heading">Meteor</h1>
 				    <h3>Learn how to design attractive websites!</h3>
 				 </div>
 				  <img src="logomac.jpg" class="landing-image imageMeteor" />
 				</a>
 			 </div>
-			 <div class="row css-logo-image">
+			 <div class="row css-logo-image js-logo-math">
 				 <a href="#">
-				 <div class="meteor_head">
-				    <h1 class="meteor_heading">Mathematics</h1>
+				 <div class="meteor_head math_tutorial">
+				    <h1 class="meteor_heading">Math</h1>
 				    <h3>Read our tutorials on college level Mathematics!</h3>
 				 </div>
-				  <img src="mathematicslogo.jpg" class="landing-image imageMeteor" />
+				  <img src="math.jpg" class="landing-image imageMeteor" />
 				 </a>
 			 </div>
 			<div class="row top_posts">
