finished animations manding page

--- a/client/landing_page/jumbotron.html
+++ b/client/landing_page/jumbotron.html
@@ -4,7 +4,19 @@
 				<a href="#">
 				<div class="meteor_head meteor_tutorial">
 				    <h1 class="meteor_heading">Meteor</h1>
-				    <h3>Learn how to design attractive websites!</h3>
+				    <h3 class="sub-meteor js-sub-meteor">Learn how to design attractive websites!</h3>
+
+				    <div class="lineMeteor">
+				    <p>
+				    	Learn how to:<br/>
+				    	- Design attractive, useful websites.<br/>
+				    	- Use one of the most modern Javascript technologies.<br/>
+				    	- Get your job done in a week, instead of month.<br/>
+				    	- All of this for free!<br/>
+				    	- Just click......
+				    </p> 
+
+				    </div>
 				 </div>
 				  <img src="logomac.jpg" class="landing-image imageMeteor" />
 				</a>
@@ -12,8 +24,20 @@
 			 <div class="row css-logo-image js-logo-math">
 				 <a href="#">
 				 <div class="meteor_head math_tutorial">
-				    <h1 class="meteor_heading">Math</h1>
-				    <h3>Read our tutorials on college level Mathematics!</h3>
+
+				    <h1 class="meteor_heading">Education</h1>
+				    <h3>Read our articles on college level Mathematics!</h3>
+
+				    <div class="lineMath">
+				    <p>
+				    	Here you can read:<br/>
+				    	- How we deal with our college courses like Math, Economics and Exposition.<br/>
+				    	- How we study for the exams.<br/>
+				    	- Some tips and hints about technique of remembering the most important things.<br/>
+				    	- All of this from students like you, who have the same problems.<br/>
+				    	- Just click.....
+				    </p>
+				    </div>
 				 </div>
 				  <img src="math.jpg" class="landing-image imageMeteor" />
 				 </a>
