--- a/client/landing_page/myLatestWidgetTemplate.html
+++ b/client/landing_page/myLatestWidgetTemplate.html
@@ -32,7 +32,7 @@
         <li>Loading...</li>
       {{/each}}
     </ul>
-    <a href="{{blogPathFor 'blogIndex'}}">View all posts&nbsp; &rsaquo;</a>
+    <a href="{{blogPathFor 'blogIndex'}}"><button class="btn btn-success">View all posts&nbsp; &rsaquo;</button></a>
   </div>
   </div>
 </template>
