fixed the navbar font, colors anf effects

--- a/client/landing_page/jumbotron.html
+++ b/client/landing_page/jumbotron.html
@@ -26,7 +26,7 @@
 				 <div class="meteor_head math_tutorial">
 
 				    <h1 class="meteor_heading">Education</h1>
-				    <h3>Read our articles on college level Mathematics!</h3>
+				    <h3 class="js-sub-math">Read our articles on college level Mathematics!</h3>
 
 				    <div class="lineMath">
 				    <p>
