--- a/client/navbar.html
+++ b/client/navbar.html
@@ -16,7 +16,7 @@
                     <li><a href="/"> Influential </a></li>
                     <li><a href="/blog">Blog</a></li>
                     <li><a href="/recipes">Meteor</a></li>
-                    <li><a href="#">Mathematics</a></li>
+                    <li><a href="#">Education</a></li>
                     <li><a href="/contact">Contacts</a></li>
                 </ul>
 
