added href attributes

--- a/client/navbar.html
+++ b/client/navbar.html
@@ -15,7 +15,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="/"> Influential </a></li>
                     <li><a href="/blog">Blog</a></li>
-                    <li><a href="/recipes">Meteor</a></li>
+                    <li><a href="/meteorpost">Meteor</a></li>
                     <li><a href="#">Education</a></li>
                     <li><a href="/contact">Contacts</a></li>
                 </ul>
