--- a/client/recipes/meteorpost.html
+++ b/client/recipes/meteorpost.html
@@ -1,11 +1,11 @@
-<template name="recipes">
+<template name="meteorpost">
   <div class="container" id="recipes">
      <center><h2>Meteor: </h2></center>
      <hr/>
      {{#each current_theme}}
      <div class="row">
-        <a href="/recipes/{{_id}}"><h2>{{title}}</h2></a>
-       </div>
+        <a href="#" class="linkMeteorPost"><center><h2 class="css-meteor-blogpost js-meteor-blogpost">{{title}}</h2></center></a>
+     </div>
      {{/each}}
      <div class="odd">
      {{> blogIndex}}
