--- a/client/contact/contact.html
+++ b/client/contact/contact.html
@@ -2,23 +2,23 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <center><h2> Свържете се с нас </h2></center>
+        <center><h2> Contacts: </h2></center>
 
         <form class="form-horizontal js-send-message" role="form">
             <div class="form-group">
-                <label for="name" class="col-sm-2 control-label">Име:</label>
+                <label for="name" class="col-sm-2 control-label">Name:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="name" name="name" placeholder="Вашите имена" value="" required>
+                    <input type="text" class="form-control" id="name" name="name" placeholder="Your names" value="" required>
                 </div>
             </div>
             <div class="form-group">
-                <label for="email" class="col-sm-2 control-label">Ел. Поща</label>
+                <label for="email" class="col-sm-2 control-label">Email:</label>
                 <div class="col-sm-10">
                     <input type="email" class="form-control" id="email" name="email" placeholder="example@domain.com" value="" required>
                 </div>
             </div>
             <div class="form-group">
-                <label for="message" class="col-sm-2 control-label">Съобщение</label>
+                <label for="message" class="col-sm-2 control-label">Message</label>
                 <div class="col-sm-10">
                     <textarea class="form-control" rows="4" id="message" name="message" required></textarea>
                 </div>
@@ -26,12 +26,12 @@
             <div class="form-group">
                 <label for="human" class="col-sm-2 control-label">2 + 3 = ?</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="human" name="human" placeholder="Отговорете тук!">
+                    <input type="text" class="form-control" id="human" name="human" placeholder="Answer here!">
                 </div>
             </div>
             <div class="form-group">
                 <div class="col-sm-10 col-sm-offset-2">
-                    <input id="submit" name="submit" type="submit" value="Прати" class="btn btn-primary">
+                    <input id="submit" name="submit" type="submit" value="Send" class="btn btn-primary">
                 </div>
             </div>
         </form>
